<resources>
    <string name="app_name">Workoutz</string>
    <string name="add_new_profile">Add New Profile</string>
    <string name="select_profile">Select Profile</string>
    <string name="timer_text">0:00</string>
    <string name="pause_button">Start</string>
    <string name="start_workout_button">Start Workout</string>
    <string name="workoutz">Workoutz</string>
    <string name="back">Back</string>
    <string name="create_profile">Create Profile</string>
    <string name="dashboard">Workoutz Dashboard</string>
    <string name="name">Name:</string>
    <string name="reps">Reps:</string>
    <string name="work_interval">Work Interval:</string>
    <string name="rest_interval">Rest Interval:</string>
    <string name="total_days">Total Days:</string>
    <string name="total_time">Total Time:</string>
    <string name="reps_remaining">0</string>
    <string name="current_timer">Get ready...</string>
    <string name="reps_remaining_label">Reps Remaining:</string>
    <string name="zeros">00</string>
    <string name="colon">:</string>
    <string name="workouthistory">Workout History (Last 10 days)</string>
</resources>