<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileDashboard">

    <TextView
        android:id="@+id/dashboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dashboard"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="null"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toEndOf="@+id/profileLabelName"
        app:layout_constraintTop_toBottomOf="@+id/dashboardTitle" />

    <TextView
        android:id="@+id/profileReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:text="null"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileName" />

    <TextView
        android:id="@+id/profileWorkInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:text="null"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileReps" />

    <TextView
        android:id="@+id/profileRestInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:text="null"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileWorkInterval" />

    <TextView
        android:id="@+id/profileTotalDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:text="null"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileRestInterval" />

    <TextView
        android:id="@+id/profileTotalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:text="null"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileTotalDays" />

    <TextView
        android:id="@+id/profileLabelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/profileName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/profileLabelReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/reps"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/profileReps"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/profileLabelWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/work_interval"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/profileWorkInterval"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/profileLabelRest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/rest_interval"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/profileRestInterval"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/profileLabelTotalDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/total_days"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/profileTotalDays"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/profileLabelTotalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/total_time"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/profileTotalTime"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:onClick="startButton"
        android:text="@string/start_workout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileTotalTime" />

    <Button
        android:id="@+id/button2"
        android:layout_width="96dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="backButton"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>